--- a/.gitmodules
+++ b/.gitmodules
@@ -94,3 +94,6 @@
 [submodule "vim/bundle/syntax-minitest"]
 	path = vim/bundle/syntax-minitest
 	url = git://github.com/sunaku/vim-ruby-minitest.git
+[submodule "vim/bundle/syntax-less"]
+	path = vim/bundle/syntax-less
+	url = git://github.com/groenewege/vim-less.git
