--- a/.gitmodules
+++ b/.gitmodules
@@ -103,3 +103,6 @@
 [submodule "vim/bundle/syntax-slim"]
 	path = vim/bundle/syntax-slim
 	url = git://github.com/bbommarito/vim-slim.git
+[submodule "vim/bundle/autoclose"]
+	path = vim/bundle/autoclose
+	url = git://github.com/seletskiy/vim-autoclose.git
