--- a/.gitmodules
+++ b/.gitmodules
@@ -109,3 +109,6 @@
 [submodule "vim/bundle/colors-mango"]
 	path = vim/bundle/colors-mango
 	url = git://github.com/goatslacker/mango.vim.git
+[submodule "vim/bundle/colors-zenburn"]
+	path = vim/bundle/colors-zenburn
+	url = git://github.com/jnurmine/Zenburn.git
