--- a/.gitmodules
+++ b/.gitmodules
@@ -115,3 +115,6 @@
 [submodule "vim/bundle/bufexplorer"]
 	path = vim/bundle/bufexplorer
 	url = git://github.com/vim-scripts/bufexplorer.zip.git
+[submodule "vim/bundle/syntax-handlebars"]
+	path = vim/bundle/syntax-handlebars
+	url = git://github.com/nono/vim-handlebars.git
