Use author's repo for irblack colorscheme

--- a/.gitmodules
+++ b/.gitmodules
@@ -78,7 +78,7 @@
 	url = git://github.com/tpope/vim-cucumber.git
 [submodule "vim/bundle/colors-irblack"]
 	path = vim/bundle/colors-irblack
-	url = git://github.com/wgibbs/vim-irblack.git
+	url = git://github.com/twerth/ir_black.git
 [submodule "vim/bundle/colors-molokai"]
 	path = vim/bundle/colors-molokai
 	url = git://github.com/vim-scripts/molokai.git
