Add github.com/tpope/vim-git as a submodule. Actually vim is shipped with this plugin since 7.2, but sourcing this repo will give me more recent updates

--- a/.gitmodules
+++ b/.gitmodules
@@ -112,3 +112,6 @@
 [submodule "vim/bundle/syntax-handlebars"]
 	path = vim/bundle/syntax-handlebars
 	url = git://github.com/nono/vim-handlebars.git
+[submodule "vim/bundle/syntax-git"]
+	path = vim/bundle/syntax-git
+	url = https://github.com/tpope/vim-git.git
