Fix path to vim-git repo

--- a/.gitmodules
+++ b/.gitmodules
@@ -114,7 +114,7 @@
 	url = git://github.com/nono/vim-handlebars.git
 [submodule "vim/bundle/syntax-git"]
 	path = vim/bundle/syntax-git
-	url = https://github.com/tpope/vim-git.git
+	url = git://github.com/tpope/vim-git.git
 [submodule "vim/bundle/colors-lucius"]
 	path = vim/bundle/colors-lucius
 	url = git://github.com/jonathanfilip/vim-lucius.git
