--- a/.gitmodules
+++ b/.gitmodules
@@ -81,7 +81,7 @@
 	url = git://github.com/twerth/ir_black.git
 [submodule "vim/bundle/colors-molokai"]
 	path = vim/bundle/colors-molokai
-	url = git://github.com/vim-scripts/molokai.git
+	url = git://github.com/tomasr/molokai.git
 [submodule "vim/bundle/syntax-minitest"]
 	path = vim/bundle/syntax-minitest
 	url = git://github.com/sunaku/vim-ruby-minitest.git
