--- a/.gitmodules
+++ b/.gitmodules
@@ -109,9 +109,6 @@
 [submodule "vim/bundle/bufexplorer"]
 	path = vim/bundle/bufexplorer
 	url = git://github.com/vim-scripts/bufexplorer.zip.git
-[submodule "vim/bundle/syntax-handlebars"]
-	path = vim/bundle/syntax-handlebars
-	url = git://github.com/nono/vim-handlebars.git
 [submodule "vim/bundle/syntax-git"]
 	path = vim/bundle/syntax-git
 	url = git://github.com/tpope/vim-git.git
@@ -142,3 +139,6 @@
 [submodule "vim/fonts"]
 	path = vim/fonts
 	url = git://github.com/powerline/fonts.git
+[submodule "vim/bundle/syntax-mustache-handlebars"]
+	path = vim/bundle/syntax-mustache-handlebars
+	url = git://github.com/mustache/vim-mustache-handlebars.git
