Migrate from extradite to gitv

--- a/.gitmodules
+++ b/.gitmodules
@@ -85,9 +85,6 @@
 [submodule "vim/bundle/ack"]
 	path = vim/bundle/ack
 	url = git://github.com/mileszs/ack.vim.git
-[submodule "vim/bundle/extradite"]
-	path = vim/bundle/extradite
-	url = git://github.com/int3/vim-extradite.git
 [submodule "vim/bundle/bufexplorer"]
 	path = vim/bundle/bufexplorer
 	url = git://github.com/vim-scripts/bufexplorer.zip.git
@@ -151,3 +148,6 @@
 [submodule "vim/bundle/syntax-docker"]
 	path = vim/bundle/syntax-docker
 	url = git://github.com/ekalinin/Dockerfile.vim.git
+[submodule "vim/bundle/gitv"]
+	path = vim/bundle/gitv
+	url = git://github.com/gregsexton/gitv.git
